--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-paper-phone-number-input",
   "version": "1.0.0",
-  "description": "A phone number input component for react-native-paper with country flags",
+  "description": "A performant phone number input component for react-native-paper with country picker",
   "main": "dist/commonjs/index.js",
   "module": "dist/module/index.js",
   "react-native": "src/index.tsx",
